[gd_scene load_steps=5 format=3 uid="uid://dop55cbvucvfj"]

[ext_resource type="Script" path="res://menu.gd" id="1_1plqs"]
[ext_resource type="Theme" uid="uid://dwctb0tlytcoo" path="res://pipeline_theme.tres" id="1_gyw7c"]
[ext_resource type="FontFile" uid="uid://dnsh0g58gjw40" path="res://assets/fonts/m5x7.ttf" id="3_0c04y"]
[ext_resource type="Texture2D" uid="uid://r7w3i5pq8sy4" path="res://assets/background_grey.png" id="3_yks1f"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gyw7c")
script = ExtResource("1_1plqs")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(222, 120)
texture = ExtResource("3_yks1f")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = -1.5
offset_right = 93.0
offset_bottom = 99.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Exit")
theme_override_fonts/font = ExtResource("3_0c04y")
text = "Commencer"

[node name="Level_selector" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_0c04y")
text = "SÃ©lectionner un niveau"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Start")
theme_override_fonts/font = ExtResource("3_0c04y")
text = "Quitter le jeu "

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.5
offset_top = -76.5
offset_right = -17.5
offset_bottom = -63.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.5, 2.5)
theme_type_variation = &"ScreenText"
text = "Pipeline Panik
"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Level_selector" to="." method="_on_level_selector_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
